--- a/ch01_basic_tags/marktag.html
+++ b/ch01_basic_tags/marktag.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="5f5f5f">
-    <h1>인용문 관련 태그</h1>
+    <h1><mark>인용문</mark> 관련 태그</h1>
     <h2>짧은 인용문을 위한 q 태그</h2>
     <p>
         <strong>q</strong> 태그에 대해 MDN 문서는
