--- a/ch01_basic_tags/oltag.html
+++ b/ch01_basic_tags/oltag.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="5f5f5f">
     <h1>계란 볶음밥 만들기</h1>
-    <ol>
+    <ol type="I" start="">
         <li>재료 준비</li>
         <ul>
             <li>밥</li>
