--- a/ch02_element/05_colgrouptag.html
+++ b/ch02_element/05_colgrouptag.html
@@ -10,8 +10,12 @@
 <body bgcolor="5f5f5f">
     <h1>05_colgrouptag.html</h1>
     <table>
-        <caption>1월</caption>
-        <colgroup >
+        <caption>2026년 1월</caption>
+    <colgroup>
+        <col class="weekend">
+        <col span="5">
+        <col class="weekend">
+    </colgroup>
             <tr>
                 <th scope="col">일</th>
                 <th scope="col">월</th>
