--- a/ch03_inputs/09_optiontag.html
+++ b/ch03_inputs/09_optiontag.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="5f5f5f">
     <h1>09_optiontag.html</h1>
     <h1>옵션들을 사용하는 태그</h1>
     <h2>select, option 태그</h2>
