--- a/ch05_text_style/03_textdecoration.html
+++ b/ch05_text_style/03_textdecoration.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./01_fontstyle.css">
+    <link rel="stylesheet" href="./03_textdecoration.css">
 </head>
 <body bgcolor="5f5f5f">
-    <h1>01_fontstyle.html / 01_fontstyle.css</h1>
-    <p>일반적인 문단입니다.</p>
+    <h1>03_textdecoration.html</h1>
+    <p>This is a sample text with custom text decoration.</p>
 </body>
 </html>
