--- a/ch05_text_style/04_textshadow.html
+++ b/ch05_text_style/04_textshadow.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./01_fontstyle.css">
+    <link rel="stylesheet" href="./04_textshadow.css">
 </head>
 <body bgcolor="5f5f5f">
-    <h1>01_fontstyle.html / 01_fontstyle.css</h1>
-    <p>일반적인 문단입니다.</p>
+    <p>text-shadow 적용 사례</p>
 </body>
 </html>
