--- a/test/test01.html
+++ b/test/test01.html
@@ -6,21 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./test01.css">
 </head>
-<body bgcolor="000000">
-    <h1>
-        <span class="R">R</span>
-        <span class="G">G</span>
-        <span class="B">B</span>
-    </h1>
-    <h1>
-        <span class="R">R</span>
-        <span class="G">G</span>
-        <span class="B">B</span>
-    </h1>
-    <h1>
-        <span class="R">R</span>
-        <span class="G">G</span>
-        <span class="B">B</span>
-    </h1>
+<body bgcolor="333333">
+    <div>
+        <span class="R">
+            R
+        </span>
+        <span class="G">
+            G
+        </span>
+        <span class="B">
+            B
+        </span>
+    </div>
 </body>
 </html>
