--- a/test/test01.html
+++ b/test/test01.html
@@ -7,124 +7,18 @@
     <link rel="stylesheet" href="./test01.css">
 </head>
 <body bgcolor="333333">
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-    
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
-    </div>
-
-    <div>
-        <span class="R">
-            R
-        </span>
-        <span class="G">
-            G
-        </span>
-        <span class="B">
-            B
-        </span>
+    <div class="first">
+        <div class="something"></div>
+        <div class="second">1</div>
+        <div class="second">2</div>
+        <div class="second">3</div>
+        <div class="second">4</div>
+        <div class="second">5</div>
+        <div class="second">6</div>
+        <div class="second">7</div>
+        <div class="second">8</div>
+        <div class="second">9</div>
+        <div class="second">0</div>
     </div>
 </body>
 </html>
